--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
       <version>1.5.1</version>
     </dependency>
 
+    <!-- Twilio -->
+    <dependency>
+      <groupId>com.twilio.sdk</groupId>
+      <artifactId>twilio</artifactId>
+      <version>8.10.0</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 
 
